--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Staatliches&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,500;0,700;1,400;1,500;1,700&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -12,6 +13,7 @@ html {
 
 main {
   width: 100%;
+  overflow: hidden;
 }
 
 a {
@@ -283,5 +285,404 @@ header section #right .hero-image {
   top: -40px;
   left: -36px;
   z-index: -1;
+}
+
+.points {
+  width: 100%;
+  padding: 0px 14rem 18rem 14rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+}
+
+.points .left {
+  width: 45%;
+  background: url(../assests/mobile.svg) center center no-repeat;
+  background-size: contain;
+}
+
+.points .right {
+  width: 45%;
+  overflow: hidden;
+  position: relative;
+}
+
+.points .right h1 {
+  font-family: 'DM Sans';
+  font-weight: 700;
+  font-size: 7rem;
+  color: #1A2E35;
+  padding-bottom: 2rem;
+}
+
+.points .right h1 span {
+  color: #FFC800;
+}
+
+.points .right p {
+  font-family: 'DM Sans';
+  font-weight: 500;
+  font-size: 1.8rem;
+  color: #5B5D63;
+  padding-bottom: 2rem;
+}
+
+.points .right ul {
+  list-style: disc !important;
+}
+
+.points .right ul li {
+  font-family: 'DM Sans';
+  font-weight: 500;
+  font-size: 1.8rem;
+  padding-bottom: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.points .right ul li img {
+  margin-right: 1rem;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.points .right::before {
+  content: "";
+  width: 8.5rem;
+  height: 52rem;
+  background: url(../assests/arrow.svg) center center no-repeat;
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  left: -13.6rem;
+}
+
+.points::before {
+  content: "";
+  -webkit-transform: rotate(-15deg);
+          transform: rotate(-15deg);
+  width: 10rem;
+  height: 17rem;
+  position: absolute;
+  top: -143px;
+  left: -13px;
+  background: url(../assests/location.svg) center center no-repeat;
+  background-size: contain;
+}
+
+.points::after {
+  content: "";
+  overflow: hidden;
+  -webkit-transform: rotate(15deg);
+          transform: rotate(15deg);
+  width: 10rem;
+  height: 17rem;
+  position: absolute;
+  bottom: 0px;
+  right: -13px;
+  background: url(../assests/location.svg) center center no-repeat;
+  background-size: contain;
+}
+
+.features {
+  width: 100%;
+  padding: 8rem 10rem;
+  position: relative;
+}
+
+.features h1 {
+  width: 100%;
+  text-align: center;
+  font-family: 'Inter';
+  font-weight: 800;
+  font-size: 4.8rem;
+  padding-bottom: 4rem;
+  color: #18191F;
+}
+
+.features #feature-cards {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding-bottom: 10rem;
+}
+
+.features #feature-cards div {
+  width: 300px;
+  padding: 2rem;
+  text-align: center;
+}
+
+.features #feature-cards div h2 {
+  font-family: 'Inter';
+  font-weight: 600;
+  font-size: 2.4rem;
+  color: #18191F;
+  padding-bottom: 1rem;
+}
+
+.features #feature-cards div p {
+  font-family: 'Inter';
+  font-weight: 400;
+  font-size: 1.6rem;
+  color: #18191F;
+}
+
+.features::after {
+  content: "";
+  width: 30rem;
+  height: 30rem;
+  background: url(../assests/design1.svg) center center no-repeat;
+  background-size: contain;
+  position: absolute;
+  bottom: 40px;
+  left: -18rem;
+  z-index: -1;
+}
+
+.features::before {
+  content: "";
+  width: 30rem;
+  height: 30rem;
+  background: url(../assests/design2.svg) center center no-repeat;
+  background-size: contain;
+  position: absolute;
+  top: 0;
+  right: -8rem;
+  z-index: -1;
+}
+
+#footer-image {
+  width: 100%;
+  height: 25rem;
+  background: url(../assests/footer.svg) left bottom no-repeat;
+  background-size: contain;
+}
+
+footer {
+  padding: 2rem;
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  color: white;
+  background-color: #1A2E35;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.4rem;
+  color: #D9DBE1;
+}
+
+.signup {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.25);
+  display: none;
+  place-items: center;
+}
+
+.signup form {
+  width: 50rem;
+  background-color: white;
+  -webkit-box-shadow: 9.39709px 25.3119px 63px rgba(0, 0, 0, 0.01);
+          box-shadow: 9.39709px 25.3119px 63px rgba(0, 0, 0, 0.01);
+  border-radius: 2rem;
+  padding: 3.9rem 5.8rem;
+}
+
+.signup form h3 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 39px;
+  text-align: center;
+  -webkit-font-feature-settings: 'salt' on, 'liga' off;
+          font-feature-settings: 'salt' on, 'liga' off;
+  padding-bottom: 5rem;
+}
+
+.signup form p {
+  position: relative;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.8rem;
+  letter-spacing: -0.02em;
+  color: #000000;
+}
+
+.signup form input[type=text], .signup form input[type=password], .signup form input[type=submit] {
+  width: 100%;
+  margin-bottom: 4rem;
+  padding: 1rem 1rem 1rem 5rem;
+  outline: none;
+  border: 2px solid #E2E2E2;
+  border-radius: 8px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 110%;
+  letter-spacing: -0.02em;
+  color: #A0A0A0;
+}
+
+.signup form input[type=submit] {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.8rem;
+  letter-spacing: -0.02em;
+  padding: 1.2rem 0rem;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.signup form input[type=checkbox] {
+  border: 2px solid #E2E2E2;
+  margin-right: .9rem;
+}
+
+.signup form #email::before {
+  content: "";
+  position: absolute;
+  top: 2.7rem;
+  left: .7rem;
+  width: 3rem;
+  height: 3rem;
+  background: url("../assests/mail.svg") center center no-repeat;
+  background-size: contain;
+  z-index: 100;
+}
+
+.signup form #password::before {
+  content: "";
+  position: absolute;
+  top: 2.7rem;
+  left: .7rem;
+  width: 3rem;
+  height: 3rem;
+  background: url("../assests/password.svg") center center no-repeat;
+  background-size: contain;
+  z-index: 100;
+}
+
+.login {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.25);
+  display: none;
+  place-items: center;
+}
+
+.login form {
+  width: 50rem;
+  background-color: white;
+  -webkit-box-shadow: 9.39709px 25.3119px 63px rgba(0, 0, 0, 0.01);
+          box-shadow: 9.39709px 25.3119px 63px rgba(0, 0, 0, 0.01);
+  border-radius: 2rem;
+  padding: 3.9rem 5.8rem;
+}
+
+.login form h3 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 3rem;
+  line-height: 39px;
+  text-align: center;
+  -webkit-font-feature-settings: 'salt' on, 'liga' off;
+          font-feature-settings: 'salt' on, 'liga' off;
+  padding-bottom: 5rem;
+}
+
+.login form p {
+  position: relative;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1.8rem;
+  letter-spacing: -0.02em;
+  color: #000000;
+}
+
+.login form input[type=text], .login form input[type=password], .login form input[type=submit] {
+  width: 100%;
+  margin-bottom: 4rem;
+  padding: 1rem 1rem 1rem 5rem;
+  outline: none;
+  border: 2px solid #E2E2E2;
+  border-radius: 8px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 110%;
+  letter-spacing: -0.02em;
+  color: #A0A0A0;
+}
+
+.login form input[type=submit] {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.8rem;
+  letter-spacing: -0.02em;
+  padding: 1.2rem 0rem;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+.login form input[type=checkbox] {
+  border: 2px solid #E2E2E2;
+  margin-right: .9rem;
+}
+
+.login form #email::before {
+  content: "";
+  position: absolute;
+  top: 2.7rem;
+  left: .7rem;
+  width: 3rem;
+  height: 3rem;
+  background: url("../assests/mail.svg") center center no-repeat;
+  background-size: contain;
+  z-index: 100;
+}
+
+.login form #password::before {
+  content: "";
+  position: absolute;
+  top: 2.7rem;
+  left: .7rem;
+  width: 3rem;
+  height: 3rem;
+  background: url("../assests/password.svg") center center no-repeat;
+  background-size: contain;
+  z-index: 100;
 }
 /*# sourceMappingURL=stylesheet.css.map */
