--- a/profile/css/history.scss
+++ b/profile/css/history.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Raleway&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -149,6 +149,64 @@ a{
 #crops{
     width: 100%;
     height: 60vh;
-    background: url(../assets/wheat_img.webp) center center no-repeat;
-    background-size: cover;
+    table{
+        width: 100%;
+        margin-top: 16px;
+        border-spacing: 0px 12px;
+        height: 100px;
+        overflow-y: scroll;
+        thead{
+            width: 100%;
+            tr{
+                width: 100%;
+                
+                th{
+                    width: 16.66%;
+                    text-align: center;
+                    color: white;
+                    padding: 7px 20px;
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 15px;
+                    background-color: #2B454E;
+                }
+                th:first-child {
+                    border-top-left-radius: 10px;
+                    border-bottom-left-radius: 10px;
+                }
+                
+                th:last-child {
+                    border-bottom-right-radius: 10px;
+                    border-top-right-radius: 10px;
+                }
+            }
+        }
+        tbody{
+            width: 100%;
+            tr{
+                width: 100%;
+                background-color: #F1F1F1;
+                cursor: pointer;
+                td{
+                    text-align: center;
+                    padding: 7px 10px;
+                    font-family: 'Montserrat';
+                    font-style: normal;
+                    font-weight: 500;
+                    width: 16.66%;
+                    font-size: 12px;
+                                                   
+                }
+                td:first-child {
+                    border-top-left-radius: 10px;
+                    border-bottom-left-radius: 10px;
+                }
+                td:last-child {
+                    border-bottom-right-radius: 10px;
+                    border-top-right-radius: 10px;
+                }
+            }
+        }
+    }
 }
