--- a/profile/css/profile.scss
+++ b/profile/css/profile.scss
@@ -12,6 +12,19 @@ html{
     font-size: 62.5%;
 }
 
+body::-webkit-scrollbar{
+    width: 5px;
+}
+body::-webkit-scrollbar-track{
+    width: 5px;
+    background-color: transparent;
+}
+body::-webkit-scrollbar-thumb{
+    width: 5px;
+    background: #FFC800;
+    border-radius: 10px;
+}
+
 #profile-page{
     width: 100%;
     height: 100vh;
