--- a/css/stylesheet.scss
+++ b/css/stylesheet.scss
@@ -70,6 +70,7 @@ header{
             display: flex;
             justify-content: space-between;
             align-items: center;
+            margin-right: 35px;
             li{
                 padding: 1rem 2rem;
                 border-radius: 0.6rem;
