--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -98,6 +98,7 @@ header nav ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-right: 35px;
 }
 
 header nav ul li {
