--- a/profile/css/location.css
+++ b/profile/css/location.css
@@ -188,10 +188,8 @@ a {
   text-decoration: none;
 }
 
-#crops {
+#map {
   width: 100%;
   height: 60vh;
-  background: url(../assets/wheat_img.webp) center center no-repeat;
-  background-size: cover;
 }
 /*# sourceMappingURL=location.css.map */
