--- a/profile/css/location.scss
+++ b/profile/css/location.scss
@@ -146,9 +146,7 @@ a{
     text-decoration: none;
 }
 
-#crops{
+#map{
     width: 100%;
     height: 60vh;
-    background: url(../assets/wheat_img.webp) center center no-repeat;
-    background-size: cover;
 }
